--- a/PluginForRevit2022.csproj
+++ b/PluginForRevit2022.csproj
@@ -52,6 +52,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -65,15 +66,24 @@
     <Compile Include="App.cs" />
     <Compile Include="ArbmAPIElementHelper.cs" />
     <Compile Include="ArbmFamiliesManager.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="CmdConvertationForRevitVersion.cs" />
-    <Compile Include="CmdRenameParametersForFamilies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PluginForRevit2022.addin" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resourses\" />
+    <Content Include="Resourses\button1.ico" />
+    <Content Include="Resourses\button2.ico" />
+    <Content Include="Resourses\DB.ico" />
+    <Content Include="Resourses\icons8-folders-32.ico" />
+    <Content Include="Resourses\icons8-корзина-16.ico" />
+    <Content Include="Resourses\icons8-папка-16.ico" />
+    <Content Include="Resourses\icons8-папка-пользователя-16.ico" />
+    <Content Include="Resourses\icons8-проводник-windows-16.ico" />
+    <Content Include="Resourses\settingsMain.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
