--- a/PluginForRevit2022.csproj
+++ b/PluginForRevit2022.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\Examples\Aerbim.3DSD.Test.RenameParametersOfFamilies\Aerbim.3DSD.Test.RenameParametersOfFamilies\ScanFolderCopyAndProcess\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="RevitAPI">
       <HintPath>C:\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
       <Private>False</Private>
@@ -55,25 +56,42 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="ArbmAPIElementHelper.cs" />
     <Compile Include="ArbmFamiliesManager.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="CmdRemoveParameters.cs" />
     <Compile Include="CmdConvertationForRevitVersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControl1.xaml.cs">
+      <DependentUpon>UserControl1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserRemoveParameters.xaml.cs">
+      <DependentUpon>UserRemoveParameters.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="PluginForRevit2022.addin" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="UserControl1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserRemoveParameters.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Resourses\button1.ico" />
     <Content Include="Resourses\button2.ico" />
