--- a/PluginForRevit2022.csproj
+++ b/PluginForRevit2022.csproj
@@ -69,12 +69,10 @@
     <Compile Include="App.cs" />
     <Compile Include="ArbmAPIElementHelper.cs" />
     <Compile Include="ArbmFamiliesManager.cs" />
+    <Compile Include="Parameters.cs" />
     <Compile Include="CmdRemoveParameters.cs" />
     <Compile Include="CmdConvertationForRevitVersion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserControl1.xaml.cs">
-      <DependentUpon>UserControl1.xaml</DependentUpon>
-    </Compile>
     <Compile Include="UserRemoveParameters.xaml.cs">
       <DependentUpon>UserRemoveParameters.xaml</DependentUpon>
     </Compile>
@@ -83,10 +81,6 @@
     <None Include="PluginForRevit2022.addin" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="UserControl1.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="UserRemoveParameters.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
